--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             </section>
         </main>
         <footer>
-            <div class="container">Created By Billa Vikas...</div>
+            <div class="container">Created By donthukurthi janvi...</div>
         </footer>
     </body>
 </html>
